--- a/IMD WeatherApp/app/src/main/AndroidManifest.xml
+++ b/IMD WeatherApp/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.OmWeatherApp"
+        android:theme="@style/Theme.SarangWeatherApp"
         tools:targetApi="31">
         <activity
             android:name=".SplashActivity"
